[v0.1.8] Fixup dark mode for mining

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -4,6 +4,7 @@ body.darkMode {
 body.darkMode .block,
 body.darkMode .modal-content,
 body.darkMode .bg-white,
+body.darkMode .bg-light,
 body.darkMode .dropdown-menu {
   background: #34495e !important;
 }
